# glitch-grow-sales-agent

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml
migrations/: 0001_init_schema.sql  0002_hubspot_links.sql  0003_pos_platform.sql  README.md
scripts/: send_b2b_window.sh
src/sales_agent/: __init__.py  config.py  server.py
src/sales_agent/agent/: __init__.py  brand.py  drafter.py  prompts.py  recipes.py  recipes_stub.py  run_draft_batch.py
src/sales_agent/db/: __init__.py  models.py  pool.py  repos.py
src/sales_agent/discord/: __init__.py  auth.py  bot.py  formatter.py
src/sales_agent/discovery/: __init__.py  google_places.py  run_downtown.py  run_gta.py  run_north_york.py
src/sales_agent/enrichment/: __init__.py  contact_finder.py  run_chain_filter.py  run_enrichment.py  run_pos_rescan.py  run_rescore.py  run_scoring.py  score.py  site_detector.py
src/sales_agent/hubspot/: __init__.py  bootstrap_pipeline.py  client.py  mapper.py  pipelines.py  run_replay_engagements.py  run_sync_all.py  stages.py  sync.py
src/sales_agent/mail/: __init__.py  gmail_sender.py  render.py  resend_sender.py  run_send_approved.py
src/sales_agent/mail/templates/: cold_email.html
tests/: test_smoke.py
