[project]
name = "glitch-grow-ai-sales-agent"
version = "0.0.1"
description = "Autonomous AI sales agent — discovery, enrichment, recipe-based drafting, Discord HITL, Gmail send, reply tracking. First deployment: Glitch Budz cannabis e-commerce SaaS."
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
  # Web / server
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "httpx>=0.27",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "python-dotenv>=1.0",

  # Agent stack
  "langgraph>=0.2",
  "langchain-core>=0.3",
  "pydantic-ai>=0.0.14",
  "litellm>=1.52",

  # LLM providers (LiteLLM dispatches to these)
  "anthropic>=0.40",
  "google-genai>=0.3",

  # Discovery
  "googlemaps>=4.10",

  # Email
  "google-api-python-client>=2.150",
  "google-auth>=2.35",
  "google-auth-oauthlib>=1.2",

  # Discord
  "discord.py>=2.4",

  # DB
  "asyncpg>=0.30",
  "pgvector>=0.3",

  # Scraping / parsing for enrichment
  "beautifulsoup4>=4.12",
  "selectolax>=0.3.21",
  "dnspython>=2.7",

  # Utilities
  "structlog>=24.4",
  "tenacity>=9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.7",
  "mypy>=1.13",
  "types-requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sales_agent"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP", "ASYNC"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
